# demo-project

./: pyproject.toml
data/: jgb.code-profile
notebooks/: comment.ipynb  test.ipynb
src/: dataset.py
