[project]
name = "genai-launchpad"
version = "1.0.0"
description = "GenAI Launchpad by Datalumina"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "celery>=5.5.3",
    "fastapi>=0.116.1",
    "instructor>=1.8.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pydantic-ai>=0.2.16",
    "python-dotenv>=1.1.0",
    "python-frontmatter>=1.1.0",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.3",
    "dos2unix >= 1",
]

[dependency-groups]
dev = [
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "nest-asyncio>=1.6.0",
    "ruff>=0.11.13",
]

[tool.ruff]
exclude = [".venv", "app/core/commands", "app/alembic", ".sh"]

[project.scripts]
createworkflow = "app.core.commands.init_workflow:main"

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

tool.uv.package= true
